# clapfft

./: .gitignore  CMakeLists.txt  Run_for_Paras.sh  build_and_run_benchmarks.sh  build_and_run_test.sh  compile_test.sh  install_lib.sh
cmake/: clapfft-config.cmake.in
doc/: RISK.md
example/: main.cpp
include/clapfft/: advanced_fft.hpp  clapfft_api.hpp  fft_plan_cache.hpp  fft_traits.hpp  fftw_traits.hpp  guru_fft.hpp
install/include/clapfft/: clapfft_api.hpp  fft_flags.hpp  wisdom.hpp
install/lib/cmake/clapfft/: clapfft-config.cmake  clapfft-targets-release.cmake  clapfft-targets.cmake
src/: advanced_fft.cpp  clapfft_api.cpp  fft_flags.cpp  fft_traits_impl.cpp  guru_fft.cpp  wisdom.cpp
tests/: benchmark_c2c_3d_all_precisions.cpp  benchmark_c2r_3d_long_double.cpp  benchmark_clapfft_vs_fftw.cpp  benchmark_parallel_c2c_1d_threads.cpp  benchmark_r2r_3d_float.cpp  test_advanced_guru.cpp  test_advanced_many_dft.cpp  test_advanced_many_dft_c2r.cpp  test_advanced_many_dft_r2c.cpp  test_advanced_many_r2r.cpp  test_c2c.cpp  test_c2c_1d.cpp  test_c2c_2d.cpp  test_c2c_3d.cpp  test_c2r_1d.cpp  test_c2r_2d.cpp  test_c2r_3d.cpp  test_r2c_1d.cpp  test_r2c_2d.cpp  test_r2c_3d.cpp  test_r2r_1d.cpp  test_r2r_2d.cpp  test_r2r_3d.cpp  test_wisdom.cpp
